--- a/WEB/CSS/style.css
+++ b/WEB/CSS/style.css
@@ -13,6 +13,7 @@ LOOK AT OTHER FILE FOR MORE SPECIFIC SETTINGS*/
 	width: 100%;
 	height: 2rem;
 	font-size : 1.5rem;
+	z-index: 10; /*all other z-indeces should be lower */
 }
 
 .titleBarButtons { /*class of ul the buttons inside the top bar*/
